# labelel

./: Cargo.toml
docs/: dokumentacja.typ
src/: app.rs  colors.rs  main.rs  project.rs  yolo.rs
