[package]
name = "labelel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.0"
egui = { version = "0.33.0", features = ["rayon"] }
egui_extras = { version = "0.33.0", features = ["all_loaders", "image"] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_yaml = "0.9.34"

[profile.release]
strip = true 
lto = true
